# ginger-algebra-ocl

./: .gitignore  COPYRIGHT  Cargo.toml  README.md
algebra-cl-gen/: Cargo.toml  README.md
algebra-cl-gen/src/gpu/: error.rs  macros.rs  mod.rs  sources.rs  utils.rs
algebra-cl-gen/src/gpu/multiexp/: ec.cl  field2.cl
algebra-cl-gen/src/gpu/polycommit/: round_reduce.cl
algebra-kernels/: Cargo.toml  README.md
algebra-kernels/src/: fft.rs  lib.rs  msm.rs  polycommit.rs  test.rs
bellperson/: Cargo.toml
bellperson/src/: lib.rs
bellperson/src/gpu/: mod.rs  sources.rs
bellperson/src/gpu/multiexp/: field2.cl
ff-cl-gen/: Cargo.toml  README.md
ff-cl-gen/src/: lib.rs  nvidia.rs
