[package]
name = "algebra-kernels"
version = "0.2.0"
authors = ["Phoinic <max@phoinic.com.ua>"]
edition = "2018"

[dependencies]
algebra = { path = "../../ginger-lib/algebra" }
bellperson = { path = "../bellperson" }
rust-gpu-tools = { version = "0.2.0" }
lazy_static = "1.4.0"
log = "0.4.8"
derivative = { version = "2", features = [ "use_core" ] }

[dev-dependencies]
env_logger = "0.7.1"

[features]
bls12_377 = [ "bellperson/bls12_377" ]
bls12_381 = [ "bellperson/bls12_381" ]
edwards_bls12 = [ "bellperson/edwards_bls12" ]
edwards_sw6 = [ "bellperson/edwards_sw6" ]
jubjub = [ "bellperson/jubjub" ]
sw6 = [ "bellperson/sw6" ]
mnt4_298 = [ "bellperson/mnt4_298" ]
mnt4_753 = [ "bellperson/mnt4_753" ]
mnt6_298 = [ "bellperson/mnt6_298" ]
mnt6_753 = [ "bellperson/mnt6_753" ]
bn254 = [ "bellperson/bn254" ]
bn_382 = [ "bellperson/bn_382" ]
tweedle = [ "bellperson/tweedle" ]
