[package]
name = "algebra-kernels"
version = "0.2.0"
authors = ["Phoinic <max@phoinic.com.ua>"]
edition = "2018"

[dependencies]
algebra = { git = "ssh://git@github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl" }
algebra-cl-gen = { path = "../algebra-cl-gen" }
rust-gpu-tools = { version = "0.3.0" }
lazy_static = "1.4.0"
lazy_mut = "0.1.0"
log = "0.4.8"
derivative = { version = "2", features = [ "use_core" ] }

[dev-dependencies]
env_logger = "0.7.1"

[features]
bls12_377 = [ "algebra-cl-gen/bls12_377" ]
bls12_381 = [ "algebra-cl-gen/bls12_381" ]
edwards_bls12 = [ "algebra-cl-gen/edwards_bls12" ]
edwards_sw6 = [ "algebra-cl-gen/edwards_sw6" ]
jubjub = [ "algebra-cl-gen/jubjub" ]
sw6 = [ "algebra-cl-gen/sw6" ]
mnt4_753 = [ "algebra-cl-gen/mnt4_753" ]
mnt6_298 = [ "algebra-cl-gen/mnt6_298" ]
mnt6_753 = [ "algebra-cl-gen/mnt6_753" ]
bn_382 = [ "algebra-cl-gen/bn_382" ]
tweedle = [ "algebra-cl-gen/tweedle" ]
