[package]
name = "ff-cl-gen"
version = "0.2.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "OpenCL code generator for prime-fields"
documentation = "https://docs.rs/ff-cl-gen"
edition = "2018"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff-cl-gen"

[dependencies]
algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl" }
itertools = { version = "0.8.0" }

[dev-dependencies]
ocl = { version = "0.19.4", package = "fil-ocl"}
rand = "0.7"
lazy_static = "1.2"

algebra = { git = "https://github.com/HorizenOfficial/ginger-lib", branch = "algebra_ocl", features = [ "bls12_381" ] }
